# GiggleTech_OSC_Router

./: Cargo.toml  README.md  config.ini
giggletech-router/: Cargo.toml
giggletech-router/src/: config.rs  data_processing.rs  giggletech_osc.rs  handle_osc_message.rs  handle_proximity_parameter.rs  handle_twitch_message.rs  main.rs  osc.rs  osc_timeout.rs  terminator.rs
giggletech-router/src/message_queue/: message.rs  message_queue_actor.rs  mod.rs  osc_environment.rs  osc_type.rs  queue_handler.rs
giggletech-router/src/twitch_integration/: message.rs  mod.rs  socket.rs  ws_client.rs
src/: config.rs  device_socket.rs  device_uri.rs  main.rs
src/device_actor/: device_socket.rs  device_socket_handle.rs  mod.rs
src/main_actor/: actor.rs  handle.rs  mod.rs
src/osc_actor/: actor.rs
