[package]
name = "async-osc"
version = "1.0.0"
description = "Heavy Modded Async "
readme = "README.md"
edition = "2018"
keywords = ["osc", "vrchat", "async-std"]
authors = ["Giggle Tech <hello@giggletech.io>"
]

[features]

[dependencies]
rosc = "0.10.1"
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }
log = "0.4.14"
futures-lite = "1.11.3"
thiserror = "1.0.48"
configparser = "3.0.2"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.75"
once_cell = "1.18.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
