[package]
name = "async-osc"
version = "1.0.0"
description = "Heavy Modded Async "
readme = "README.md"
edition = "2018"
keywords = ["osc", "vrchat", "async-std"]
authors = ["Giggle Tech <hello@giggletech.io>"
]

[features]

[dependencies]
rosc = "0.10.1"
async-osc = "0.2.0"
async-std = { version = "1.8.0", features = ["attributes", "unstable"] }
log = "0.4.14"
futures-lite = "1.11.3"
thiserror = "1.0.50"
configparser = "3.0.2"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.75"
once_cell = "1.18.0"
actor-lite = { git = "https://github.com/Fynises/actor-lite.git", branch = "main" }
ezsockets = { version = "0.6.1", features = ["rustls"] }
async-trait = "0.1.74"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
url = "2.2.2"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
